# motion_planning

./: README.md
lecture_2_search_based_path_finding/: readme.md  result.md  summary.md
lecture_2_search_based_path_finding/src/grid_path_searcher/: CMakeLists.txt
lecture_2_search_based_path_finding/src/grid_path_searcher/include/: Astar_searcher.h  JPS_searcher.h  JPS_utils.h  node.h
lecture_2_search_based_path_finding/src/grid_path_searcher/launch/: demo.launch
lecture_2_search_based_path_finding/src/grid_path_searcher/src/: Astar_searcher.cpp  JPS_searcher.cpp  demo_node.cpp
lecture_3_sample_based_path_finding/: readme.md  summary.md
lecture_3_sample_based_path_finding/src/grid_path_searcher/: CMakeLists.txt
lecture_3_sample_based_path_finding/src/my_grid_path_search/: CMakeLists.txt  package.xml
lecture_3_sample_based_path_finding/src/my_grid_path_search/app/: generate_random_map.cpp
lecture_3_sample_based_path_finding/src/my_grid_path_search/include/my_grid_path_search/: RRTstar.h
lecture_3_sample_based_path_finding/src/my_grid_path_search/src/: RRTstar.cpp
lecture_4_kinodynamic_path_finding/: readme.md  summary.md
lecture_4_kinodynamic_path_finding/src/grid_path_searcher/: CMakeLists.txt
lecture_5_minimum_snap_trajectoty_generation/: readme.md  summary.md
lecture_6_soft_and_hard_constrained_trajectory_optimization/: readme.md  summary.md
lecture_6_soft_and_hard_constrained_trajectory_optimization/code/: YHTrangle.m  getAbeq.m  getAbieq.m  getQM.m  hw6.m  nearestSPD.m
(+27 files in other folders)
